--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-tooltip": "^4.2.10"
+    "react-switch": "^6.0.0",
+    "react-tooltip": "^4.2.10",
+    "socket.io-client": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
