--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -18,6 +19,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
+    "p-queue": "^6.6.2",
+    "socket.io": "^3.1.0",
+    "socket.io-client": "^3.1.0",
+    "socketio-jwt": "^4.6.2",
     "validator": "^13.1.17"
   }
 }
